# ohtu7projekti

./: .gitignore  .pylintrc  LICENSE  README.md  pyproject.toml  retro.dm
.github/workflows/: ci.yml
robot_tests/: listaa_viitteet.robot  poista_viite.robot  resource.robot  sprintin3_backlogin_kriteerit.robot  suodata_viitteet.robot
src/: Lahteet.bib  ViiteLibrary.py  app.py  index.py
src/data/: viitteet.json
src/entities/: Viite.py
src/repositories/: ViiteRepository.py
src/services/: ViiteService.py
tests/: test_app.py  test_console_io.py  test_index.py  test_viite_library.py  test_viite_repository.py  test_viite_service.py
