[project]
name = "miniprojekti"
version = "0.1.0"
description = ""
authors = [
    {name = "anneveka",email = "anneveka@jyu.fi"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "miniprojekti", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.1,<10.0.0)",
    "pytest-cov (>=4.0.0,<6.0.0)",
    "pylint (>=4.0.4,<5.0.0)",
    "robotframework (>=7.3.2,<8.0.0)"
]
